# houyxBriskCuda

./: readme.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: FastCuda.1500968270303.pdom  cudaTest.1500437716335.pdom  language.settings.xml  shareddefaults.xml
.metadata/.plugins/org.eclipse.cdt.make.core/: FastCuda.sc  FastTest.sc  cudaTest.sc
.metadata/.plugins/org.eclipse.core.resources/: 8.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/FastCuda/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/FastCuda/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/FastCuda/.indexes/e4/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/FastTest/: .markers  .markers.snap  1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/FastTest/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/FastTest/.indexes/e4/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/cudaTest/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/cudaTest/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 8.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: FastTest.launch  cudaTest.launch
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.houyx-n551jw_35/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.houyx-n551jw_35/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.houyx-n551jw_35/FP.org.eclipse.ptp.remote.rse.core._0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.houyx-n551jw_35/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
BriskCuda/: .cproject  .project
BriskCuda/src/: cuda_types.hpp  test.cu
BriskCuda/src/briskCode/: BriskLayerOne.cu  BriskLayerOne.cuh  BriskScaleSpace.cu  BriskScaleSpace.cuh  GlobalFunctions.cu  GlobalFunctions.cuh
BriskCuda/src/libsrc/AgastCuda/: AgastCuda.cuh
BriskCuda/src/libsrc/FastCuda/: FastCuda.cu  FastCuda.h  mask.hpp
BriskCudaLibTest/: .cproject
BriskCudaLibTest/src/: BriskCudaLibTest.cpp
BriskCudaLibTest/src/includes/: BriskScaleSpace.h  FastCuda.h
BriskCudaLibTwo/: .cproject  .project
BriskCudaLibTwo/src/includes/: cuda_types.h  globalValues.h  mask.hpp
BriskCudaLibTwo/src/libsrc/: cuda_types.cu
BriskCudaLibTwo/src/libsrc/AgastCuda/: AgastCuda.cu
CmakeProject/BriskCudaLibTest/: .cproject  .project  CMakeLists.txt
CmakeProject/BriskCudaLibTest/src/: BriskCudaLibTest.cpp
CmakeProject/BriskCudaLibTest/src/includes/: AgastCuda.h  BriskScaleSpace.h  cuda_types.h  table.h
CmakeProject/BriskCudaLibTwo1/: CMakeLists.txt  library.h
CmakeProject/BriskCudaLibTwo1/src/briskCode/: BriskScaleSpace.cu
CmakeProject/BriskCudaLibTwo1/src/libsrc/FastCuda/: FastCuda.cu
CudaGccGccTestShared/: .cproject  .project
CudaGccGccTestShared/Debug/: CudaGccGccTestShared  makefile  objects.mk
CudaGccGccTestShared/Debug/src/: subdir.mk
CudaGccGccTestShared/Release/: makefile  objects.mk
CudaGccGccTestShared/Release/src/: CudaGccGccTestShared.d  subdir.mk
CudaGccGccTestShared/src/: CudaGccGccTestShared.cpp  VV.h
CudaGccShared/: .cproject  .project
CudaGccTest/: .cproject  .project
CudaGccTest/src/: CudaGccTest.cu  VV.cu
FastCuda/: .cproject  .project  debug1.txt  debugcv2.txt
FastCuda/Debug/: FastCuda  makefile  objects.mk
FastCuda/Debug/src/: FastCuda.d  subdir.mk  test.d
FastCuda/src/: FastCuda.cu  FastCuda.h  cuda_types.hpp  mask.hpp  table.h  test.cpp  test.cu
FastTest/: .cproject  .project  debugcv1.txt
FastTest/Debug/: FastTest  makefile  objects.mk
FastTest/Debug/src/: main.d  subdir.mk
FastTest/Release/: makefile
FastTest/Release/src/: main.d  subdir.mk
FastTest/src/: main.cpp
FuckBrisk/: .cproject  .project
FuckBrisk/src/: cuda_types.hpp  test.cu
FuckBrisk/src/Interface/: BriskInterface.cpp  BriskInterface.h
FuckBrisk/src/briskCode/: BriskScaleSpace.cuh
FuckBrisk/src/libsrc/: BaseIncludes.cuh
FuckBrisk/src/libsrc/AgastCuda/: AgastCuda.cuh
FuckBrisk/src/libsrc/FastCuda/: FastCuda.cu  FastCuda.h  mask.hpp  table.h
ImageProcesser/: .cproject  .project
ReductionSample/: .cproject  .project
cudaOpenMP/: .cproject  .project
cudaTest/: .cproject  .project
cudaTest/Debug/: cudaTest  makefile  nsightbuilddata
cudaTest/Debug/src/: cudaTest.d  subdir.mk
cudaTest/src/: cudaTest.cu  cudaTest_device_value.temp  cuda_types.hpp
nothing/: .cproject  .project
nothing/src/: nothing.cu
(+6 files in other folders)
